tests/test_proof/bad/output/dates_simple-empty.catala_en.Proof
[ERROR] [A.y] This variable might return an empty error:
 --> tests/test_proof/bad/dates_simple-empty.catala_en
  | 
6 |   context y content boolean
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
